Broken HTML for fiddle history links, and screwy CSS for overflowing tab content. Fixes jakefeasel/sqlfiddle2#9

--- a/src/main/resources/ui/sqlfiddle/www/css/fiddle.less
+++ b/src/main/resources/ui/sqlfiddle/www/css/fiddle.less
@@ -153,6 +153,10 @@ pre.results, .resultSetPreview li pre {
 #content form {
   margin: 0;
 }
+#myFiddlesModal .tab-content {
+    overflow: visible;
+}
+
 .tab-content .tab-pane {
   height: 100%;
 }
